--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
   crossorigin="anonymous"
 />
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap" rel="stylesheet">    
+<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
