--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
 />
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap" rel="stylesheet">    
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&family=Poppins:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Gorditas:wght@700&family=Limelight&family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
