--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap" rel="stylesheet">    
 <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Gorditas:wght@700&family=Limelight&family=Montserrat:wght@900&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Kathleen Tonner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
